--- a/styles/style.css
+++ b/styles/style.css
@@ -356,7 +356,7 @@ body {
     justify-content: space-between;
 }
 
-main {
+body, main {
     min-height: 100dvh;
 }
 
@@ -521,17 +521,17 @@ main {
 
     #intro_left-column h2>div>span[style*="--i:9"] {
         padding-top: var(--segment-quarter);
-        transform: translateX(-0.15rem);
+        transform: translateX(-0.35rem);
     }
 
     #intro_left-column h2>div>span[style*="--i:10"] {
         padding-top: var(--segment-quarter);
-        transform: translateX(-0.225rem);
+        transform: translateX(-0.245rem);
     }
 
     #intro_left-column h2>div>span[style*="--i:11"] {
         padding-top: var(--segment-quarter);
-        transform: translateX(-0.3rem);
+        transform: translateX(-0.32rem);
     }
 }
 
@@ -724,6 +724,10 @@ main {
     border-radius: 1.375rem 0.375rem 0.375rem 1.375rem;
 }
 
+#menu_email_button-wrapper {
+    border-radius: 1.375rem 1.375rem 0.375rem 1.375rem;
+}
+
 #menu_links {
     row-gap: 0.375rem;
 }
@@ -732,6 +736,10 @@ main {
     padding: 0 0.75rem 0 1rem;
     margin-top: -0.078125rem;
     letter-spacing: 0.125rem;
+}
+
+#menu_button-wrapper {
+    margin-top: 0.5625rem;
 }
 
 @media (min-width: 45rem) and (min-aspect-ratio: 3/4) {
@@ -761,6 +769,7 @@ main {
     }
 
     #menu_button-wrapper {
+        margin-top: 0;
         grid-row: span 2 / span 2;
     }
 }
@@ -1694,19 +1703,26 @@ body {
 }
 
 .tooltip kbd {
-    display: inline-block;
-    padding: 0.375rem;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.5rem;
+    height: 1.5rem;
     background-color: rgba(255, 255, 255, 0.15);
     border-radius: 0.25rem;
 }
 
 .tooltip kbd>span {
+    position: absolute;
     font-family: 'Chakra Petch', monospace;
+    margin: auto;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 0;
     font-size: 0.89285625rem;
     line-height: 0.625rem;
+    padding: 0.1rem 0.05rem 0 0.05rem;
 }
 
 .tooltip kbd>span::before {
