add various updates (WIP)

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -227,7 +227,7 @@ body {
 }
 
 
-/* Flex */
+/* Flex Wrap */
 
 .flex-wrap {
     flex-wrap: wrap;
@@ -236,6 +236,9 @@ body {
 .flex-nowrap {
     flex-wrap: nowrap;
 }
+
+
+/* Flex Direction */
 
 .flex-row {
     flex-direction: row;
@@ -247,6 +250,20 @@ body {
 
 .flex-col-reverse {
     flex-direction: column-reverse;
+}
+
+
+/* Flex Grow */
+
+.flex-grow {
+    flex-grow: 1;
+}
+
+
+/* Flex Shrink */
+
+.flex-shrink-0 {
+    flex-shrink: 0;
 }
 
 
@@ -278,15 +295,8 @@ body {
 
 /* Align Self */
 
-.alig-self-start {
+.align-self-start {
     align-self: start;
-}
-
-
-/* Flex Grow */
-
-.flex-grow {
-    flex-grow: 1;
 }
 
 
