--- a/styles/style.css
+++ b/styles/style.css
@@ -232,10 +232,6 @@ body {
     --footer-rectangle: var(--cyan-full-20);
 }
 
-#logo span {
-    background-image: url(../images/logo-animated-dark.svg)
-}
-
 
 /* Accessibility */
 a,
@@ -309,14 +305,14 @@ button,
 /* Root */
 
 :root {
-    font-size: 0.75rem;
+    font-size: 0.875rem;
 }
 
-@media (min-width: 45rem) {
+/* @media (min-width: 45rem) {
     :root {
         font-size: 0.875rem;
     }
-}
+} */
 
 @media (min-width: 75rem) {
     :root {
@@ -746,6 +742,10 @@ body, main {
     border-radius: 1.375rem 0.375rem 0.375rem 1.375rem;
 }
 
+#menu_email_button-wrapper, #menu_links>a:last-child {
+    border-radius: 1.375rem 0.375rem 0.625rem 1.375rem;
+}
+
 #menu_email_button-wrapper {
     border-radius: 1.375rem 1.375rem 0.375rem 1.375rem;
 }
@@ -775,6 +775,10 @@ body, main {
         border-radius: 1.75rem 1rem 1rem 1.75rem;
     }
 
+    #menu_email_button-wrapper, #menu_links>a:last-child {
+        border-radius: 1.375rem 0.375rem 0.375rem 1.375rem;
+    }
+
     #menu_email_button-wrapper {
         border-radius: 1.375rem 0.375rem 0.375rem 1.375rem;
     }
@@ -801,7 +805,7 @@ body, main {
 
 body {
     --menu-icon-bit-size: 2px;
-    --menu-icon-gap: 2px;
+    --menu-icon-gap: 2.5px;
     --menu-icon-gap-between: 8px;
     --menu-icon-radius: calc((var(--menu-icon-bit-size) + var(--menu-icon-gap)) / 2)
 }
@@ -1047,23 +1051,22 @@ body {
     border-radius: var(--modal-button-close-border-radius);
     background-color: var(--inner-bg-light-2);
 }
-
+p
 #modal_button-close svg {
     color: var(--modal-icon-inner);
+}
+
+#modal_profile_content, #modal_archive-content {
+    margin-right: calc(var(--modal-button-close-size) + var(--modal-button-close-inset) + (var(--segment) / 5));
 }
 
 
 /* Modal - Profile */
 
-#modal_profile_content {
-    margin-right: calc(var(--modal-button-close-size) + var(--modal-button-close-inset));
-}
-
 #modal_profile_content dl {
-    padding: var(--segment-half);
+    padding: var(--segment-quarter) 0 var(--segment-quarter) var(--segment-quarter);
     display: grid;
     grid-template-columns: 1fr;
-    grid-column-gap: calc(var(--segment) * (3/4));
     list-style: none;
     color: var(--text-1);
 }
@@ -1085,10 +1088,18 @@ body {
     margin-bottom: var(--segment-half);
 }
 
+@media (min-width: 45rem) {
+    #modal_profile_content dl {
+        padding: var(--segment-third) 0 var(--segment-third) var(--segment-third);
+    }
+}
+
 @media (min-width: 60rem) {
     #modal_profile_content dl {
+        padding: var(--segment-half) 0 var(--segment-half) var(--segment-half);
         grid-template-columns: auto 1fr;
         grid-row-gap: calc(var(--segment) * (3/4));
+        grid-column-gap: calc(var(--segment) * (3/4));
     }
 
     #modal_profile_content dl dt {
@@ -1243,9 +1254,15 @@ body {
 
 /* Modal - Archive */
 
+/* #modal_archive-wrapper {
+    padding-top: 1.5rem;
+    padding-left: 1.5rem;
+} */
+
 #modal_archive-content {
     display: grid;
     grid-auto-flow: row;
+    padding: var(--segment-quarter) 0 var(--segment-quarter) var(--segment-quarter);
 }
 
 #modal_archive-content_section-title {
@@ -1313,6 +1330,15 @@ body {
 }
 
 @media (min-width: 45rem) {
+    /* #modal_archive-wrapper {
+        padding-top: 2rem;
+        padding-left: 2rem;
+    } */
+
+    #modal_archive-content {
+        padding: var(--segment-third) 0 var(--segment-third) var(--segment-third);
+    }
+
     #modal_archive-content_section-title > div hr:nth-of-type(2) {
         display: none;
     }
@@ -1333,6 +1359,17 @@ body {
 
     #modal_archive-content_section-divider {
         order: 0;
+    }
+}
+
+@media (min-width: 60rem) {
+    /* #modal_archive-wrapper {
+        padding-top: 3rem;
+        padding-left: 3rem;
+    } */
+
+    #modal_archive-content {
+        padding: var(--segment-half) 0 var(--segment-half) var(--segment-half);
     }
 }
 
@@ -1548,6 +1585,16 @@ body {
 }
 
 
+/* Timeline */
+
+#horizontal-timeline-wrapper {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+
 /* Logo animation */
 
 #logo {
@@ -1564,7 +1611,26 @@ body {
     }
 }
 
+/* @media (min-width: 45rem) {
+    :root {
+        font-size: 0.875rem;
+    }
+}
+
+@media (min-width: 75rem) {
+    :root {
+        font-size: 1rem;
+    }
+}
+
+@media (min-width: 160rem) {
+    :root {
+        font-size: 1.125rem;
+    }
+} */
+
 #logo span {
+    background-image: url(../images/logo-animated-dark.svg);
     animation-name: logo-animation;
     animation-duration: 0.5s;
     animation-timing-function: steps(30);
@@ -1848,7 +1914,6 @@ footer>div {
 }
 
 #rectangle {
-    width: 100%;
     height: 0.75rem;
     background: repeating-linear-gradient(135deg, transparent, transparent 0.375rem, var(--footer-rectangle) 0.375rem, var(--footer-rectangle) 0.75rem), linear-gradient(to bottom, transparent, transparent);
 }
@@ -1884,9 +1949,10 @@ footer>div {
     /* rules here apply to devices from 60rem (md) and lower */
 
     #modal_profile_content dl div {
-        padding-top: 1.25rem;
+        /* padding-top: 1.25rem;
         padding-left: 1.25rem;
-        padding-right: 1.75rem;
+        padding-right: 1.75rem; */
+        padding: 1.25rem 1.75rem 0 1.25rem;
         margin-bottom: 0.875rem;
         grid-template-columns: 1fr;
         row-gap: 0.875rem;
